force-app/main/default/objects/Order/fields/img_Assinatura_Hospcom_Retorno__c.field-meta.xml
<CustomField>
    <fullName>img_Assinatura_Hospcom_Retorno__c</fullName>
    <formula>IF(
OR(ISBLANK(Assinatura_Hospcom_Retorno__c), NOT(CONTAINS(Assinatura_Hospcom_Retorno__c, &quot;hospcom&quot;))),
IMAGE(&quot;https://hospcom--c.na49.content.force.com/servlet/servlet.ImageServer?id=015310000080hog&amp;oid=00Di0000000JVhH&amp;lastMod=1502888568000&quot; , &quot;&quot;, 60,60),
IMAGE(Assinatura_Hospcom_Retorno__c, &quot;&quot;, 60,200)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assinatura Hospcom Retorno</label>
    <type>Text</type>
</CustomField>