force-app/main/default/objects/Order/fields/In_cio_Ag_Aprov_Locacao__c.field-meta.xml
<CustomField>
    <fullName>In_cio_Ag_Aprov_Locacao__c</fullName>
    <label>Início Ag Aprov Locação</label>
    <type>DateTime</type>
</CustomField>