force-app/main/default/objects/Order/fields/Inicio_Aprovado__c.field-meta.xml
<CustomField>
    <fullName>Inicio_Aprovado__c</fullName>
    <label>Inicio Aprovado</label>
    <type>DateTime</type>
</CustomField>