force-app/main/default/objects/Order/fields/Inicio_At_Ent_Parcial__c.field-meta.xml
<CustomField>
    <fullName>Inicio_At_Ent_Parcial__c</fullName>
    <label>Inicio At/Ent Parcial</label>
    <type>DateTime</type>
</CustomField>