force-app/main/default/objects/Order/fields/Inicio_Em_Andamento__c.field-meta.xml
<CustomField>
    <fullName>Inicio_Em_Andamento__c</fullName>
    <label>Início Em Andamento</label>
    <type>DateTime</type>
</CustomField>