force-app/main/default/objects/Order/fields/Inicio_Entregue_Total__c.field-meta.xml
<CustomField>
    <fullName>Inicio_Entregue_Total__c</fullName>
    <label>Inicio Entregue Total</label>
    <type>DateTime</type>
</CustomField>