force-app/main/default/objects/Order/fields/InicioAgAprovComercial__c.field-meta.xml
<CustomField>
    <fullName>InicioAgAprovComercial__c</fullName>
    <label>Início Ag Aprov Comercial</label>
    <type>DateTime</type>
</CustomField>