force-app/main/default/objects/Order/fields/InicioAgAprovFinanceira__c.field-meta.xml
<CustomField>
    <fullName>InicioAgAprovFinanceira__c</fullName>
    <label>Início Ag Aprov Financeira</label>
    <type>DateTime</type>
</CustomField>