force-app/main/default/objects/Order/fields/Key_Account__c.field-meta.xml
<CustomField>
    <fullName>Key_Account__c</fullName>
    <formula>Account.Key_Account__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Key Account</label>
    <type>Checkbox</type>
</CustomField>