force-app/main/default/objects/Order/fields/Lead_Criado_RD__c.field-meta.xml
<CustomField>
    <fullName>Lead_Criado_RD__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lead Criado RD</label>
    <type>Checkbox</type>
</CustomField>