force-app/main/default/objects/Order/fields/Linha_Locacao__c.field-meta.xml
<CustomField>
    <fullName>Linha_Locacao__c</fullName>
    <formula>IF(TEXT(Contrato_de_Servi_o__r.Subtipo__c) = &apos;Linha VETERINÁRIA&apos;, &apos;VETERINÁRIA PMLS&apos;,
IF(TEXT(Contrato_de_Servi_o__r.Subtipo__c) = &apos;Linha DEA&apos;, &apos;PMLS&apos;,
IF(TEXT(Contrato_de_Servi_o__r.Subtipo__c) = &apos;Linha PMLS&apos;, &apos;PMLS&apos;,
IF(TEXT(Contrato_de_Servi_o__r.Subtipo__c) = &apos;Linha ULTRASSOM&apos;, &apos;IMAGEM ULTRASSOM&apos;,
IF(TEXT(Contrato_de_Servi_o__r.Subtipo__c) = &apos;Linha VIAS AÉREAS DIFÍCEIS&apos;, &apos;VIAS AÉREAS DIFÍCEIS&apos;,
IF(TEXT(Contrato_de_Servi_o__r.Subtipo__c) = &apos;Linha SURGICAL&apos;, &apos;SURGICAL&apos;,
IF(TEXT(Contrato_de_Servi_o__r.Subtipo__c) = &apos;Linha OPME&apos;, &apos;OPME&apos;,
&quot;&quot;)))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Linha Locacao</label>
    <type>Text</type>
</CustomField>