force-app/main/default/objects/Order/fields/Lista_de_participantes_preenchida__c.field-meta.xml
<CustomField>
    <fullName>Lista_de_participantes_preenchida__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lista de participantes preenchida</label>
    <type>Checkbox</type>
</CustomField>