force-app/main/default/objects/Order/fields/Locado_em__c.field-meta.xml
<CustomField>
    <fullName>Locado_em__c</fullName>
    <label>Locado em:</label>
    <length>255</length>
    <type>Text</type>
</CustomField>