force-app/main/default/objects/Order/fields/Medico__c.field-meta.xml
<CustomField>
    <fullName>Medico__c</fullName>
    <formula>Opportunity.Medico__r.FirstName + &apos; &apos; + Opportunity.Medico__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Médico</label>
    <type>Text</type>
</CustomField>