force-app/main/default/objects/Order/fields/medico_opme__c.field-meta.xml
<CustomField>
    <fullName>medico_opme__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Médico</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.Cargo__c</field>
            <operation>equals</operation>
            <value>Médico</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Pedidos (Médico)</relationshipLabel>
    <relationshipName>Pedidos5</relationshipName>
    <type>Lookup</type>
</CustomField>