force-app/main/default/objects/Order/fields/Mes_de_ativacao__c.field-meta.xml
<CustomField>
    <fullName>Mes_de_ativacao__c</fullName>
    <formula>MONTH(Data_de_ativacao__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mês de ativação</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>