force-app/main/default/objects/Order/fields/Motivo__c.field-meta.xml
<CustomField>
    <fullName>Motivo__c</fullName>
    <label>Motivo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Comercial - Acessórios sem destaque de valor</fullName>
            </value>
            <value>
                <fullName>Comercial - Desconto acima de 5% sem informação de liberação</fullName>
            </value>
            <value>
                <fullName>Comercial - Divergências de quantidade entre equipamentos e acessórios</fullName>
            </value>
            <value>
                <fullName>Comercial - Endereço de entrega divergente</fullName>
            </value>
            <value>
                <fullName>Comercial - Endereços de cobrança e entrega sem preenchimento</fullName>
            </value>
            <value>
                <fullName>Comercial - Natureza de operação invalida para esse pedido</fullName>
            </value>
            <value>
                <fullName>Comercial - Ordem de compra ou contrato diferente do pedido de venda</fullName>
            </value>
            <value>
                <fullName>Comercial - Pedido em duplicidade</fullName>
            </value>
            <value>
                <fullName>Comercial - Prazo de entrega anterior à data de criação do pedido</fullName>
            </value>
            <value>
                <fullName>Comercial - Sem destaque do pedido anterior de referência para validação</fullName>
            </value>
            <value>
                <fullName>Comercial - Sem destaque na obs de qual ot de cobrança por mal uso</fullName>
            </value>
            <value>
                <fullName>Comercial - Sem observações da orientação da troca/bonificação</fullName>
            </value>
            <value>
                <fullName>Comercial - Sem preenchimento de forma ou condição de pagamento</fullName>
            </value>
            <value>
                <fullName>Comercial - Venda de produtos em locação ou demonstração sem informação</fullName>
            </value>
            <value>
                <fullName>Financeiro - Cancelado (Solicitação do Comercial)</fullName>
            </value>
            <value>
                <fullName>Financeiro - CNPJ Divergente</fullName>
            </value>
            <value>
                <fullName>Financeiro - Comprovante de pagamento</fullName>
            </value>
            <value>
                <fullName>Financeiro - Condição de Pagamento Divergente</fullName>
            </value>
            <value>
                <fullName>Financeiro - Contato Financeiro (telefone/e-mail)</fullName>
            </value>
            <value>
                <fullName>Financeiro - Contrato ou Aditivo de Locação assinado</fullName>
            </value>
            <value>
                <fullName>Financeiro - Contrato ou Pedido de Compra assinado</fullName>
            </value>
            <value>
                <fullName>Financeiro - Dados Bancários (cliente público)</fullName>
            </value>
            <value>
                <fullName>Financeiro - Empenho ou Ordem de Fornecimento assinada</fullName>
            </value>
            <value>
                <fullName>Financeiro - Endereço Divergente do Cadastro</fullName>
            </value>
            <value>
                <fullName>Financeiro - Filial Correta</fullName>
            </value>
            <value>
                <fullName>Financeiro - Fora da política de crédito</fullName>
            </value>
            <value>
                <fullName>Financeiro - Inadimplente</fullName>
            </value>
            <value>
                <fullName>Financeiro - Judicializado</fullName>
            </value>
            <value>
                <fullName>Financeiro - Pendência de documento(s)</fullName>
            </value>
            <value>
                <fullName>Financeiro - Razão Social Divergente</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>