force-app/main/default/objects/Order/fields/N_mero_de_prontu_rio__c.field-meta.xml
<CustomField>
    <fullName>N_mero_de_prontu_rio__c</fullName>
    <label>Número de prontuário</label>
    <length>10</length>
    <type>Text</type>
</CustomField>