force-app/main/default/objects/Order/fields/Natureza_de_Opera_o__c.field-meta.xml
<CustomField>
    <fullName>Natureza_de_Opera_o__c</fullName>
    <label>Natureza de Operação</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BONIFICAÇÃO</fullName>
            </value>
            <value>
                <fullName>DEMONSTRAÇÃO</fullName>
            </value>
            <value>
                <fullName>LOCAÇÃO</fullName>
            </value>
            <value>
                <fullName>EMPRÉSTIMO</fullName>
            </value>
            <value>
                <fullName>REMESSA DE LOCAÇÃO</fullName>
            </value>
            <value>
                <fullName>REMESSA DE TROCA</fullName>
            </value>
            <value>
                <fullName>REMESSA EM CONSIGNAÇÃO</fullName>
            </value>
            <value>
                <fullName>SERVIÇO</fullName>
            </value>
            <value>
                <fullName>VENDA</fullName>
            </value>
            <value>
                <fullName>VENDA DA CONSIGNAÇÃO</fullName>
            </value>
            <value>
                <fullName>RETORNO DE LOCAÇÃO</fullName>
            </value>
            <value>
                <fullName>EXPORTAÇÃO</fullName>
            </value>
            <value>
                <fullName>Baixa de estoque Interno</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>