force-app/main/default/objects/Order/fields/Necess_rio_Integrar_Contratos__c.field-meta.xml
<CustomField>
    <fullName>Necess_rio_Integrar_Contratos__c</fullName>
    <formula>IF (Prazo_de_entrega__c &lt;= TODAY(), &quot;Sim&quot;, &quot;Não&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Necessário Integrar (Contratos)</label>
    <type>Text</type>
</CustomField>