force-app/main/default/objects/Order/fields/Necess_rio_Treinamento__c.field-meta.xml
<CustomField>
    <fullName>Necess_rio_Treinamento__c</fullName>
    <label>Necessário Treinamento?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SIM</fullName>
            </value>
            <value>
                <fullName>NÃO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>