force-app/main/default/objects/Order/fields/No_prazo__c.field-meta.xml
<CustomField>
    <fullName>No_prazo__c</fullName>
    <formula>IF(Data_de_Entrega2__c &lt;=   Prazo_de_entrega__c , &apos;SIM&apos;, IF(Data_de_Entrega2__c &gt; Prazo_de_entrega__c , &apos;NÃO&apos;, &apos;Sem informação&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No prazo</label>
    <type>Text</type>
</CustomField>