force-app/main/default/objects/Order/fields/Nome_Cliente_Envio__c.field-meta.xml
<CustomField>
    <fullName>Nome_Cliente_Envio__c</fullName>
    <label>Nome Cliente Envio</label>
    <type>TextArea</type>
</CustomField>