force-app/main/default/objects/Order/fields/Nome_Cliente_Retorno__c.field-meta.xml
<CustomField>
    <fullName>Nome_Cliente_Retorno__c</fullName>
    <label>Nome Cliente Retorno</label>
    <type>TextArea</type>
</CustomField>