force-app/main/default/objects/Order/fields/Nome_completo__c.field-meta.xml
<CustomField>
    <fullName>Nome_completo__c</fullName>
    <label>Nome completo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>