force-app/main/default/objects/Order/fields/Nome_Contato_Financeiro__c.field-meta.xml
<CustomField>
    <fullName>Nome_Contato_Financeiro__c</fullName>
    <label>Nome</label>
    <length>255</length>
    <type>Text</type>
</CustomField>