force-app/main/default/objects/Order/fields/Nome_do_Pagador__c.field-meta.xml
<CustomField>
    <fullName>Nome_do_Pagador__c</fullName>
    <inlineHelpText>Este campo deve ser preenchido apenas quando o pagamento for antecipado.</inlineHelpText>
    <label>Nome do Pagador</label>
    <length>255</length>
    <type>Text</type>
</CustomField>