force-app/main/default/objects/Order/fields/Nome_Hospcom_Envio__c.field-meta.xml
<CustomField>
    <fullName>Nome_Hospcom_Envio__c</fullName>
    <label>Nome Hospcom Envio</label>
    <type>TextArea</type>
</CustomField>