force-app/main/default/objects/Order/fields/Nome_Hospcom_Retorno__c.field-meta.xml
<CustomField>
    <fullName>Nome_Hospcom_Retorno__c</fullName>
    <label>Nome Hospcom Retorno</label>
    <type>TextArea</type>
</CustomField>