force-app/main/default/objects/Order/fields/NSs__c.field-meta.xml
<CustomField>
    <fullName>NSs__c</fullName>
    <label>NSs</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>