force-app/main/default/objects/Order/fields/numero_cartao_comprovante__c.field-meta.xml
<CustomField>
    <fullName>numero_cartao_comprovante__c</fullName>
    <description>número do cartão do comprovante de pagamento</description>
    <inlineHelpText>número do cartão do comprovante de pagamento</inlineHelpText>
    <label>Número do Cartão</label>
    <length>100</length>
    <type>Text</type>
</CustomField>