force-app/main/default/objects/Order/fields/Numero_do_Pedido__c.field-meta.xml
<CustomField>
    <fullName>Numero_do_Pedido__c</fullName>
    <formula>OrderNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Número do Pedido*</label>
    <type>Text</type>
</CustomField>