force-app/main/default/objects/Order/fields/Numero_do_pedido_Alterdata__c.field-meta.xml
<CustomField>
    <fullName>Numero_do_pedido_Alterdata__c</fullName>
    <label>_Número do pedido Alterdata (del)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>