force-app/main/default/objects/Order/fields/Numero_do_pedido_no_commerce__c.field-meta.xml
<CustomField>
    <fullName>Numero_do_pedido_no_commerce__c</fullName>
    <label>Numero do pedido no commerce</label>
    <length>255</length>
    <type>Text</type>
</CustomField>