force-app/main/default/objects/Order/fields/Observacoes_Gerais__c.field-meta.xml
<CustomField>
    <fullName>Observacoes_Gerais__c</fullName>
    <label>Observações Gerais</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>