force-app/main/default/objects/Order/fields/Ordem_de_trabalho__c.field-meta.xml
<CustomField>
    <fullName>Ordem_de_trabalho__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Ordem de trabalho</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>Pedidos</relationshipLabel>
    <relationshipName>Pedidos</relationshipName>
    <type>Lookup</type>
</CustomField>