force-app/main/default/objects/Order/fields/Pais__c.field-meta.xml
<CustomField>
    <fullName>Pais__c</fullName>
    <formula>ShippingCountry</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>País</label>
    <type>Text</type>
</CustomField>