force-app/main/default/objects/Order/fields/parcelas_comprovante__c.field-meta.xml
<CustomField>
    <fullName>parcelas_comprovante__c</fullName>
    <description>quantidade de parcelas do comprovante de pagamento</description>
    <inlineHelpText>quantidade de parcelas do comprovante de pagamento</inlineHelpText>
    <label>Quantidade de Parcelas</label>
    <length>100</length>
    <type>Text</type>
</CustomField>