force-app/main/default/objects/Order/fields/Participantes__c.field-meta.xml
<CustomField>
    <fullName>Participantes__c</fullName>
    <defaultValue>10</defaultValue>
    <label>Participantes</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>