force-app/main/default/objects/Order/fields/Participantes_da_demo__c.field-meta.xml
<CustomField>
    <fullName>Participantes_da_demo__c</fullName>
    <label>Participantes da demo</label>
    <summaryForeignKey>Participante_da_demo__c.Demo__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>