force-app/main/default/objects/Order/fields/Pedido_Convertido_em_Venda__c.field-meta.xml
<CustomField>
    <fullName>Pedido_Convertido_em_Venda__c</fullName>
    <description>Esse pedido de Demo foi convertido em uma venda?
Se sim, favor preencher o campo Pedido de Venda.</description>
    <label>Pedido Convertido em Venda?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SIM</fullName>
            </value>
            <value>
                <fullName>NÃO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>