force-app/main/default/objects/Order/fields/Pedido_da_Linha_de_OPME__c.field-meta.xml
<CustomField>
    <fullName>Pedido_da_Linha_de_OPME__c</fullName>
    <label>Pedido da Linha de OPME?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SIM</fullName>
            </value>
            <value>
                <fullName>NÃO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>