force-app/main/default/objects/Order/fields/pedido_remessa__c.field-meta.xml
<CustomField>
    <fullName>pedido_remessa__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pedido de remessa</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Pedidos</relationshipLabel>
    <relationshipName>Pedidos</relationshipName>
    <type>Lookup</type>
</CustomField>