force-app/main/default/objects/Order/fields/PedidoIntegradoSap__c.field-meta.xml
<CustomField>
    <fullName>PedidoIntegradoSap__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo utilizado para correção automatica de pedidos que são integrados no sap mais não ficam ativos no salesforce</description>
    <label>PedidoIntegradoSap</label>
    <type>Checkbox</type>
</CustomField>