force-app/main/default/objects/Order/fields/Per_odo_do_contrato_Fim__c.field-meta.xml
<CustomField>
    <fullName>Per_odo_do_contrato_Fim__c</fullName>
    <label>Período faturado (Fim)</label>
    <type>Date</type>
</CustomField>