force-app/main/default/objects/Order/fields/Percentual__c.field-meta.xml
<CustomField>
    <fullName>Percentual__c</fullName>
    <inlineHelpText>Em caso de duvida, falar com Marcos Oliveira Natalino(Contabilidade) sobre.</inlineHelpText>
    <label>Percentual de IRF</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>