force-app/main/default/objects/Order/fields/Periodo_Ag_Aprov_Comercial__c.field-meta.xml
<CustomField>
    <fullName>Periodo_Ag_Aprov_Comercial__c</fullName>
    <formula>IF(
ISBLANK( InicioAgAprovComercial__c ) || ISBLANK( FinalAgAprovComercial__c ),
null,
IF(
(FinalAgAprovComercial__c - InicioAgAprovComercial__c ) &gt;= 1,
TEXT(FLOOR(FinalAgAprovComercial__c - InicioAgAprovComercial__c )) &amp; &quot; dia(s) e &quot; &amp;
TEXT(FLOOR(MOD((FinalAgAprovComercial__c - InicioAgAprovComercial__c ) * 24, 24))) &amp; &quot;:&quot; &amp;
RIGHT(&quot;0&quot; &amp; TEXT(FLOOR(MOD((FinalAgAprovComercial__c - InicioAgAprovComercial__c ) * 60, 60))), 2) &amp; &quot; horas&quot;,
IF(
(FinalAgAprovComercial__c - InicioAgAprovComercial__c ) * 24 &gt;= 1,
TEXT(FLOOR((FinalAgAprovComercial__c - InicioAgAprovComercial__c ) * 24)) &amp; &quot;:&quot; &amp;
RIGHT(&quot;0&quot; &amp; TEXT(FLOOR(MOD((FinalAgAprovComercial__c - InicioAgAprovComercial__c ) * 60, 60))), 2) &amp; &quot; horas&quot;,
TEXT(FLOOR((FinalAgAprovComercial__c - InicioAgAprovComercial__c ) * 24 * 60)) &amp; &quot; minutos&quot;
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Período Ag Aprov Comercial</label>
    <type>Text</type>
</CustomField>