force-app/main/default/objects/Order/fields/Periodo_Ag_Aprov_Locacao__c.field-meta.xml
<CustomField>
    <fullName>Periodo_Ag_Aprov_Locacao__c</fullName>
    <formula>IF(
ISBLANK(In_cio_Ag_Aprov_Locacao__c   ) || ISBLANK( n_cio_Ag_Aprov_Locacao__c),
null,
IF(
(n_cio_Ag_Aprov_Locacao__c- In_cio_Ag_Aprov_Locacao__c   ) &gt;= 1,
TEXT(FLOOR(n_cio_Ag_Aprov_Locacao__c- In_cio_Ag_Aprov_Locacao__c   )) &amp; &quot; dia(s) e &quot; &amp;
TEXT(FLOOR(MOD((n_cio_Ag_Aprov_Locacao__c- In_cio_Ag_Aprov_Locacao__c) * 24, 24))) &amp; &quot;:&quot; &amp;
RIGHT(&quot;0&quot; &amp; TEXT(FLOOR(MOD((n_cio_Ag_Aprov_Locacao__c - In_cio_Ag_Aprov_Locacao__c   ) * 60, 60))), 2) &amp; &quot; horas&quot;,
IF(
(n_cio_Ag_Aprov_Locacao__c - In_cio_Ag_Aprov_Locacao__c   ) * 24 &gt;= 1,
TEXT(FLOOR((n_cio_Ag_Aprov_Locacao__c - In_cio_Ag_Aprov_Locacao__c) * 24)) &amp; &quot;:&quot; &amp;
RIGHT(&quot;0&quot; &amp; TEXT(FLOOR(MOD((n_cio_Ag_Aprov_Locacao__c - In_cio_Ag_Aprov_Locacao__c) * 60, 60))), 2) &amp; &quot; horas&quot;,
TEXT(FLOOR((n_cio_Ag_Aprov_Locacao__c - In_cio_Ag_Aprov_Locacao__c) * 24 * 60)) &amp; &quot; minutos&quot;
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Período Ag Aprov Locação</label>
    <type>Text</type>
</CustomField>