force-app/main/default/objects/Order/fields/Periodo_Ativo__c.field-meta.xml
<CustomField>
    <fullName>Periodo_Ativo__c</fullName>
    <formula>IF(
    ISBLANK(Final_Ativo__c) || ISBLANK(Inicio_Ativo__c),
    null,
    IF(
        (Final_Ativo__c - Inicio_Ativo__c) &gt;= 1,
        TEXT(FLOOR(Final_Ativo__c - Inicio_Ativo__c)) &amp; &quot; dia(s) e &quot; &amp;
        TEXT(FLOOR(MOD((Final_Ativo__c - Inicio_Ativo__c) * 24, 24))) &amp; &quot;:&quot; &amp;
        RIGHT(&quot;0&quot; &amp; TEXT(FLOOR(MOD((Final_Ativo__c - Inicio_Ativo__c) * 60, 60))), 2) &amp; &quot; horas&quot;,
        IF(
            (Final_Ativo__c - Inicio_Ativo__c) * 24 &gt;= 1,
            TEXT(FLOOR((Final_Ativo__c - Inicio_Ativo__c) * 24)) &amp; &quot;:&quot; &amp;
            RIGHT(&quot;0&quot; &amp; TEXT(FLOOR(MOD((Final_Ativo__c - Inicio_Ativo__c) * 60, 60))), 2) &amp; &quot; horas&quot;,
            TEXT(FLOOR((Final_Ativo__c - Inicio_Ativo__c) * 24 * 60)) &amp; &quot; minutos&quot;
        )
    )
)</formula>
    <label>Período Ativo</label>
    <type>Text</type>
</CustomField>