force-app/main/default/objects/Order/fields/Periodo_do_contrato_inicio__c.field-meta.xml
<CustomField>
    <fullName>Periodo_do_contrato_inicio__c</fullName>
    <label>Período faturado (inicio)</label>
    <type>Date</type>
</CustomField>