force-app/main/default/objects/Order/fields/Periodo_Entregue_Total__c.field-meta.xml
<CustomField>
    <fullName>Periodo_Entregue_Total__c</fullName>
    <formula>IF(
ISBLANK(Final_Entregue_Total__c ) || ISBLANK( Inicio_Entregue_Total__c ),
null,
IF(
(Final_Entregue_Total__c -  Inicio_Entregue_Total__c ) &gt;= 1,
TEXT(FLOOR(Final_Entregue_Total__c -  Inicio_Entregue_Total__c )) &amp; &quot; dia(s) e &quot; &amp;
TEXT(FLOOR(MOD((Final_Entregue_Total__c -  Inicio_Entregue_Total__c ) * 24, 24))) &amp; &quot;:&quot; &amp;
RIGHT(&quot;0&quot; &amp; TEXT(FLOOR(MOD((Final_Entregue_Total__c  -  Inicio_Entregue_Total__c ) * 60, 60))), 2) &amp; &quot; horas&quot;,
IF(
(Final_Entregue_Total__c  -  Inicio_Entregue_Total__c ) * 24 &gt;= 1,
TEXT(FLOOR((Final_Entregue_Total__c -  Inicio_Entregue_Total__c ) * 24)) &amp; &quot;:&quot; &amp;
RIGHT(&quot;0&quot; &amp; TEXT(FLOOR(MOD((Final_Entregue_Total__c -  Inicio_Entregue_Total__c ) * 60, 60))), 2) &amp; &quot; horas&quot;,
TEXT(FLOOR((Final_Entregue_Total__c  -  Inicio_Entregue_Total__c ) * 24 * 60)) &amp; &quot; minutos&quot;
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Período Entregue Total</label>
    <type>Text</type>
</CustomField>