force-app/main/default/objects/Order/fields/Periodo_faturamento__c.field-meta.xml
<CustomField>
    <fullName>Periodo_faturamento__c</fullName>
    <formula>IF(
DAY(Periodo_do_contrato_inicio__c) &lt; 10,
&apos;0&apos; &amp; TEXT(DAY(Periodo_do_contrato_inicio__c)),
TEXT(DAY(Periodo_do_contrato_inicio__c))
)
+ &quot;/&quot; +
IF(
MONTH(Periodo_do_contrato_inicio__c) &lt; 10,
&apos;0&apos; &amp; TEXT(MONTH(Periodo_do_contrato_inicio__c)),
TEXT(MONTH(Periodo_do_contrato_inicio__c))
)
+ &quot;/&quot; +
TEXT(YEAR(Periodo_do_contrato_inicio__c)) + &apos; À &apos; + 
IF(
DAY(Per_odo_do_contrato_Fim__c) &lt; 10,
&apos;0&apos; &amp; TEXT(DAY(Per_odo_do_contrato_Fim__c)),
TEXT(DAY(Per_odo_do_contrato_Fim__c))
)
+ &quot;/&quot; +
IF(
MONTH(Per_odo_do_contrato_Fim__c) &lt; 10,
&apos;0&apos; &amp; TEXT(MONTH(Per_odo_do_contrato_Fim__c)),
TEXT(MONTH(Per_odo_do_contrato_Fim__c))
)
+ &quot;/&quot; +
TEXT(YEAR(Per_odo_do_contrato_Fim__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Periodo faturamento</label>
    <type>Text</type>
</CustomField>