force-app/main/default/objects/Order/fields/Plano_de_sa_de__c.field-meta.xml
<CustomField>
    <fullName>Plano_de_sa_de__c</fullName>
    <label>Plano de saúde</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AFFEGO</fullName>
            </value>
            <value>
                <fullName>AMIL</fullName>
            </value>
            <value>
                <fullName>ASSEFAZ</fullName>
            </value>
            <value>
                <fullName>BRADESCO SAÚDE</fullName>
            </value>
            <value>
                <fullName>CAESAN</fullName>
            </value>
            <value>
                <fullName>CASSEMS</fullName>
            </value>
            <value>
                <fullName>CASSI</fullName>
            </value>
            <value>
                <fullName>GEAP</fullName>
            </value>
            <value>
                <fullName>HAPVIDA</fullName>
            </value>
            <value>
                <fullName>IMAS</fullName>
            </value>
            <value>
                <fullName>IPASGO</fullName>
            </value>
            <value>
                <fullName>MAIS SAÚDE</fullName>
            </value>
            <value>
                <fullName>MEDSENIOR</fullName>
            </value>
            <value>
                <fullName>NOTREDAME INTERMÉDICA</fullName>
            </value>
            <value>
                <fullName>PLANMED</fullName>
            </value>
            <value>
                <fullName>POSTAL SAÚDE</fullName>
            </value>
            <value>
                <fullName>SAMEL</fullName>
            </value>
            <value>
                <fullName>UNIMED</fullName>
            </value>
            <value>
                <fullName>UNIMED CERRADO</fullName>
            </value>
            <value>
                <fullName>UNIMED GOIANIA</fullName>
            </value>
            <value>
                <fullName>UNIMED GURUPI</fullName>
            </value>
            <value>
                <fullName>UNIMED ITUMBIARA</fullName>
            </value>
            <value>
                <fullName>UNIMED NACIONAL</fullName>
            </value>
            <value>
                <fullName>UNIMED PALMAS</fullName>
            </value>
            <value>
                <fullName>UNIMED RIO VERDE</fullName>
            </value>
            <value>
                <fullName>VIVACOM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>