force-app/main/default/objects/Order/fields/PMLS_valor__c.field-meta.xml
<CustomField>
    <fullName>PMLS_valor__c</fullName>
    <label>PMLS_valor</label>
    <summarizedField>OrderItem.Item__c</summarizedField>
    <summaryFilterItems>
        <field>OrderItem.Linha2__c</field>
        <operation>equals</operation>
        <value>PMLS</value>
    </summaryFilterItems>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>