force-app/main/default/objects/Order/fields/Prazo_de_entrega__c.field-meta.xml
<CustomField>
    <fullName>Prazo_de_entrega__c</fullName>
    <label>Prazo de entrega</label>
    <type>Date</type>
</CustomField>