force-app/main/default/objects/Order/fields/Prazo_de_Entrega_Logistica__c.field-meta.xml
<CustomField>
    <fullName>Prazo_de_Entrega_Logistica__c</fullName>
    <formula>Inicio_Ativo__c +  Prazo_acordado_para_o_Estado__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prazo de Entrega Logística</label>
    <type>Date</type>
</CustomField>