force-app/main/default/objects/Order/fields/Prazo_de_recebimento__c.field-meta.xml
<CustomField>
    <fullName>Prazo_de_recebimento__c</fullName>
    <inlineHelpText>Do Fornecedor a Hospcom, maior prazo dentre os itens.</inlineHelpText>
    <label>_Prazo de recebimento (del)</label>
    <summarizedField>OrderItem.Prazo_de_recebimento__c</summarizedField>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>